<resources>
    <string name="app_name">Unik</string>
    <string name="title_login">Authorization</string>
    <string name="main_screen_feed">Feed</string>
    <string name="main_screen_map">Map</string>
    <string name="main_screen_profile">Profile</string>
    <string name="main_screen_contact">Contact</string>
    <string name="main_screen_messenger">Messenger</string>
    <string name="msg_enter_phone_number">Enter phone number</string>
    <string name="msg_enter_password">Enter password</string>
    <string name="registration_registration_page">Registration</string>
    <string name="msg_repeat_password">Repeat password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_new_user">I\'m new user</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="msg_continue">Продолжить</string>
    <string name="form_title">Questionnaire</string>
    <string name="form_full_name">Full name</string>
    <string name="form_email">Email</string>
    <string name="form_birth_date">Birth date</string>
    <string name="form_city">City</string>
    <string name="form_university">University</string>
    <string name="specialty">Specialty</string>
    <string name="otp_sms_confirmation">SMS confirmation</string>
    <string name="otp_sms_code_sent">SMS-code\nwas sent to your number. Enter it:</string>
    <string name="form_universities">Universities</string>
    <string name="form_hobbies">Hobbies</string>
    <string name="form_specialities">Specialities</string>
    <string name="in_developing_title">Functionality in development</string>
    <string name="in_developing_subtitle">This functionality is under development and will be available in the upcoming releases.</string>
    <string name="feed_create_post">Create post</string>
    <string name="feed_title">Title</string>
    <string name="feed_description_optional">Description</string>
    <string name="feed_post_text">Post text</string>
    <string name="msg_create">Create</string>
    <string name="msg_search">Search</string>
    <string name="fragment_map_type_all">All</string>
    <string name="fragment_map_type_friends">Friends</string>
    <string name="fragment_map_type_notes">Notes</string>
    <string name="action_search_in_this_area">Search in that region</string>
    <string name="fragment_map_the_list_is_empty">List is empty</string>

    <string name="permissions__location__dialog_title">For correct loading it is recommended to enable the phone location service</string>
    <string name="permissions__location__dialog_accept">Open settings</string>
    <string name="permissions__location__dialog_cancel">Upload by region</string>
    <string name="fragment_bank_object_detail_btn_set_way">Set a route</string>
    <string name="fragment_bank_object_detail_btn_show_on_map">Show on map</string>
    <string name="map_create_point">Create point</string>
    <string name="map_point_description">Point description</string>
    <string name="map_longitude">Longitude</string>
    <string name="map_latitude">Latitude</string>
    <string name="map_location_permissions_toast_for_way">To set a route, you are required to enable and grant access to geolocation in your phone settings</string>
    <string name="no_matching_offers">No matching offers</string>
    <string name="find_by_name">Enter name</string>
    <string name="fragment_feed_type_info">Informative</string>
    <string name="fragment_feed_type_entert">Entertaining</string>
    <string name="feed_list_is_empty">List is empty</string>

    <string name="fragment_profile__data_body_info_subtitle">If your personal data has changed, then you need to change it in the Bank Branch/Outlet.</string>
    <string name="fragment_profile__data_body_info_title">ADDITIONAL INFO</string>
    <string name="fragment_profile__data_body_info_phone">Phone number</string>
    <string name="fragment_profile__data_body_info_tax_id">IIN</string>
    <string name="fragment_profile__data_body_info_numer_id">ID number</string>
    <string name="fragment_profile__data_body_info_birthday">Date of birth</string>
    <string name="profile_phone_number">Phone number</string>
    <string name="profile_email">Email</string>
    <string name="profile_city">City</string>
    <string name="profile_hobby">Hobbies</string>
    <string name="profile_university">University</string>
    <string name="profile_speciality">Speciality</string>
    <string name="profile_name">Name</string>
    <string name="profile_additional_information">Additional information</string>
    <string name="profile_friends">Friends</string>
    <string name="profile_localization">Localization</string>
    <string name="profile_requests">Requests</string>
    <string name="profile_send_request">Send request</string>
    <string name="empty_view_no_active_requests">No active requests</string>
    <string name="empty_view_no_such_user_found">No such user found</string>

    <string name="dialog_settings_interface_lang_kz" translatable="false">Қазақ тілі</string>
    <string name="dialog_settings_interface_lang_ru" translatable="false">Русский</string>
    <string name="dialog_settings_interface_lang_en" translatable="false">English</string>
    <string name="dialog_settings_interface_lang">Language selection</string>
    <string name="profile_logout">logout</string>
    <string name="profile_update">Update</string>

</resources>