<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_close"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/feed_title"
        android:textColorHint="@color/colorEditTextHintNew"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@null"
        app:endIconMode="clear_text"
        app:endIconTint="@null"
        app:endIconTintMode="multiply"
        app:errorEnabled="false"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/EditTextHint"
        app:hintTextColor="@color/colorEditTextCursorNew"
        app:layout_constraintTop_toBottomOf="@id/closeBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/map_latitude"
        android:textColorHint="@color/colorEditTextHintNew"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@null"
        app:endIconMode="clear_text"
        app:endIconTint="@null"
        app:endIconTintMode="multiply"
        app:errorEnabled="false"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/EditTextHint"
        app:hintTextColor="@color/colorEditTextCursorNew"
        app:layout_constraintTop_toBottomOf="@id/titleTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/latEditText"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/map_longitude"
        android:textColorHint="@color/colorEditTextHintNew"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@null"
        app:endIconMode="clear_text"
        app:endIconTint="@null"
        app:endIconTintMode="multiply"
        app:errorEnabled="false"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/EditTextHint"
        app:hintTextColor="@color/colorEditTextCursorNew"
        app:layout_constraintTop_toBottomOf="@id/latTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/longEditText"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bodyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/map_point_description"
        android:textColorHint="@color/colorEditTextHintNew"
        app:boxBackgroundColor="@null"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@null"
        app:endIconMode="clear_text"
        app:endIconTint="@null"
        app:endIconTintMode="multiply"
        app:errorEnabled="false"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/EditTextHint"
        app:hintTextColor="@color/colorEditTextCursorNew"
        app:layout_constraintTop_toBottomOf="@id/longTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bodyEditText"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.students.utils.ui.customViews.ProgressButton
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/msg_create"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bodyTextInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout="@layout/progress_button_secondary" />
</androidx.constraintlayout.widget.ConstraintLayout>