<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.form.presentation.FormFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/TextViewTitleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/form_form_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/form_full_name"
            android:textColorHint="@color/colorEditTextHintNew"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="multiply"
            app:errorEnabled="false"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/EditTextHint"
            app:hintTextColor="@color/colorEditTextCursorNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullnameEditText"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/form_email"
            android:textColorHint="@color/colorEditTextHintNew"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="multiply"
            app:errorEnabled="false"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/EditTextHint"
            app:hintTextColor="@color/colorEditTextCursorNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthDateTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/form_birth_date"
            android:textColorHint="@color/colorEditTextHintNew"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="multiply"
            app:errorEnabled="false"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/EditTextHint"
            app:hintTextColor="@color/colorEditTextCursorNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthDateEditText"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/form_city"
            android:textColorHint="@color/colorEditTextHintNew"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="multiply"
            app:errorEnabled="false"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/EditTextHint"
            app:hintTextColor="@color/colorEditTextCursorNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthDateTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityEditText"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/universityTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/form_university"
            android:textColorHint="@color/colorEditTextHintNew"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="multiply"
            app:errorEnabled="false"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/EditTextHint"
            app:hintTextColor="@color/colorEditTextCursorNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/universityditText"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/specialtyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"

            android:hint="@string/specialty"
            android:textColorHint="@color/colorEditTextHintNew"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="multiply"
            app:errorEnabled="false"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/EditTextHint"
            app:hintTextColor="@color/colorEditTextCursorNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/universityTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialtyyditText"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.students.utils.ui.customViews.ProgressButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_marginTop="32dp"
            android:text="@string/msg_continue"
            app:layout="@layout/progress_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
